day-2/lesson-18-helm/chart_oker/templates/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: oker
spec:
  selector:
    app: oker
  ports:
    - name: main
      protocol: TCP
      port: 80
      targetPort: 80
