day-2/lesson-18-helm/chart_oker/templates/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oker-ingress
  annotations:
    http.port: "443"
spec:
  backend:
    serviceName: oker
    servicePort: 80
rules:
  - host:
    http:
      paths:
      - path: /moe
        backend:
          serviceName: oker
          servicePort: 80
      - path: /larry
        backend:
          serviceName: oker
          servicePort: 80
      - path: /curly
        backend:
          serviceName: oker
          servicePort: 80
